[gd_scene load_steps=8 format=2]

[ext_resource path="res://menu/title_background.png" type="Texture" id=1]
[ext_resource path="res://menu/TitleScreen.gd" type="Script" id=2]
[ext_resource path="res://menu/title.png" type="Texture" id=3]
[ext_resource path="res://music/title.ogg" type="AudioStream" id=4]
[ext_resource path="res://menu/CustomButton.tscn" type="PackedScene" id=5]

[sub_resource type="Animation" id=1]
resource_name = "start"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 0.2, 1 ),
"update": 0,
"values": [ Vector2( 0, 200 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "loop"
length = 6.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../Title:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.3, 2.4, 3.9, 4, 4.2, 4.3, 5.7, 5.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.494118, 0.380392, 0.380392, 0.545098 ), Color( 1, 1, 1, 1 ), Color( 0.494118, 0.380392, 0.380392, 0.545098 ), Color( 1, 1, 1, 1 ), Color( 0.494118, 0.380392, 0.380392, 0.545098 ), Color( 1, 1, 1, 1 ), Color( 0.494118, 0.380392, 0.380392, 0.545098 ), Color( 1, 1, 1, 1 ) ]
}

[node name="TitleScreen" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="CanvasLayer" parent="."]
layer = -1

[node name="Sprite" type="Sprite" parent="Background"]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
centered = false
offset = Vector2( 0, 200 )

[node name="Start" type="AnimationPlayer" parent="Background"]
autoplay = "start"
anims/start = SubResource( 1 )

[node name="Loop" type="AnimationPlayer" parent="Background"]
autoplay = "loop"
anims/loop = SubResource( 2 )

[node name="Title" type="TextureRect" parent="."]
margin_right = 492.0
margin_bottom = 105.0
texture = ExtResource( 3 )
stretch_mode = 4

[node name="HighScore" type="Label" parent="."]
margin_top = 109.0
margin_right = 492.0
margin_bottom = 117.0
text = "High Score"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="VBoxContainer" parent="."]
margin_left = 206.0
margin_top = 121.0
margin_right = 286.0
margin_bottom = 201.0
size_flags_horizontal = 4
size_flags_vertical = 2
alignment = 1

[node name="Play" parent="Buttons" instance=ExtResource( 5 )]

[node name="Label" parent="Buttons/Play" index="0"]
text = "Play"

[node name="Settings" parent="Buttons" instance=ExtResource( 5 )]
margin_top = 28.0
margin_bottom = 52.0

[node name="Label" parent="Buttons/Settings" index="0"]
text = "Settings"

[node name="Quit" parent="Buttons" instance=ExtResource( 5 )]
margin_top = 56.0
margin_bottom = 80.0

[node name="Label" parent="Buttons/Quit" index="0"]
text = "Quit"

[node name="Legal" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_top = 260.0
margin_right = 492.0
margin_bottom = 268.0
text = "Ludum Dare #46 \"keep it alive\" --- Â© cagibi.itch.io"
align = 1

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true
bus = "music"
[connection signal="pressed" from="Buttons/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Buttons/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Buttons/Quit" to="." method="_on_Quit_pressed"]

[editable path="Buttons/Play"]

[editable path="Buttons/Settings"]

[editable path="Buttons/Quit"]
